Update codes and such (and add HD textures though you can't see em)

--- a/Dolphin/User/Config/Dolphin.ini
+++ b/Dolphin/User/Config/Dolphin.ini
@@ -15,8 +15,8 @@ ConfirmStop = False
 UsePanicHandlers = False
 OnScreenDisplayMessages = True
 HideCursor = True
-MainWindowPosX = 579
-MainWindowPosY = 126
+MainWindowPosX = 190
+MainWindowPosY = 85
 MainWindowWidth = 1000
 MainWindowHeight = 731
 LanguageCode = 
@@ -27,7 +27,7 @@ ShowLogConfigWindow = False
 ExtendedFPSInfo = False
 ShowActiveTitle = True
 UseBuiltinTitleDatabase = True
-ThemeName = Clean Emerald
+ThemeName = Clean Blue
 PauseOnFocusLost = False
 DisableTooltips = False
 [Display]
@@ -136,6 +136,8 @@ AdapterWarning = True
 SDWritable = True
 DSPREHACK = False
 WiiNetplaySaveReplays = True
+OfflineElfDeleted = False
+NetplayElfDeleted = True
 [Movie]
 PauseMovie = False
 Author = 
@@ -177,7 +179,7 @@ Devices =
 TrackForTesting = 
 HashOverride = 
 [NetPlay]
-SelectedHostGame = Project+ Netplay Launcher.elf
+SelectedHostGame = BrawlTP+ Netplay Launcher.dol
 ConnectPort = 0x0a42
 HostCode = 00000000
 HostPort = 0x0a42
